--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "today",
   "version": "0.0.0",
+  "private":true,
   "scripts": {
     "dev": "vite",
+    "dev:r": "pnpm dev --filter=react-demo",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview --port 5050",
     "test:unit": "vitest --environment jsdom",
@@ -11,6 +13,8 @@
   },
   "dependencies": {
     "@floating-ui/dom": "^0.4.2",
+    "@floating-ui/react-dom": "^0.6.1",
+    "floating-vue": "^2.0.0-beta.12",
     "vue": "^3.2.31",
     "vue-router": "^4.0.12"
   },
