--- a/packages/overlay/tsconfig.app.json
+++ b/packages/overlay/tsconfig.app.json
@@ -1,12 +1,12 @@
 {
   "extends": "@vue/tsconfig/tsconfig.web.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
-  "exclude": ["src/**/__tests__/*"],
+  "include": ["env.d.ts", "packages/overlay/src/**/*", "packages/overlay/src/**/*.vue"],
+  "exclude": ["packages/overlay/src/**/__tests__/*"],
   "compilerOptions": {
     "composite": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["packages/overlay/src/*"]
     }
   }
 }
