--- a/packages/use-floating/package.json
+++ b/packages/use-floating/package.json
@@ -1,15 +1,53 @@
 {
   "name": "use-floating",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.0.1",
+  "description": "using floating-ui with vue3 composition api",
+  "main": "dist/use-floating.js",
+  "module": "dist/use-floating.esm.js",
+  "unpkg": "dist/use-floating.min.js",
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/use-floating.esm.js",
+      "require": "./dist/use-floating.cjs"
+    },
+    "./package.json": "./package.json",
+    "./src/index.ts": "./src/index.ts"
+  },
+  "sideEffects": false,
+  "files": [
+    "dist/",
+    "index.d.ts",
+    "src/**/*.d.ts"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "NODE_ENV=build rollup -c"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@floating-ui/dom": "^0.4.2"
+    "@floating-ui/dom": "^0.4.2",
+    "vue": "^3.2.31",
+    "vue-demi": "^0.12.5"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.17.8",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-react": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.0.6",
+    "@rollup/plugin-replace": "^3.0.0",
+    "@types/jest": "^27.0.3",
+    "babel-plugin-annotate-pure-calls": "^0.4.0",
+    "babel-preset-vue": "^2.0.2",
+    "jest": "^27.3.1",
+    "rollup": "^2.60.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "ts-jest": "^27.0.7",
+    "typescript": "^4.5.2"
   }
 }
