--- a/packages/vue-demo/package.json
+++ b/packages/vue-demo/package.json
@@ -8,8 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.25",
-    "use-floating":"workspace:^0.0.1"
+    "@vitejs/plugin-vue-jsx": "^1.3.7",
+    "use-floating": "^0.0.1",
+    "vue": "^3.2.25"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.0",
