--- a/packages/use-floating/package.json
+++ b/packages/use-floating/package.json
@@ -1,6 +1,6 @@
 {
   "name": "use-floating",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "using floating-ui with vue3 composition api",
   "main": "dist/use-floating.js",
   "module": "dist/use-floating.esm.js",
@@ -23,7 +23,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "NODE_ENV=build rollup -c",
-    "build:type":"tsc -p ./tsconfig.type.json"
+    "build:type": "tsc -p ./tsconfig.type.json"
   },
   "keywords": [
     "floating-ui",
@@ -43,12 +43,15 @@
     "url": "https://github.com/wflixu/Today-UI"
   },
   "dependencies": {
+    "@babel/runtime-corejs3": "^7.17.8",
     "@floating-ui/dom": "^0.4.2",
+    "core-js": "^3.21.1",
     "vue": "^3.2.31",
     "vue-demi": "^0.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
+    "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
