--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "today",
   "version": "0.0.0",
-  "private":true,
+  "private": true,
   "scripts": {
     "dev": "vite",
     "dev:r": "pnpm dev --filter=react-demo",
     "dev:v": "pnpm dev --filter=vue-demo",
+    "dev:i": "pnpm install --filter=vue-demo",
     "build": "pnpm build --filter=use-floating",
     "publish": "pnpm build && cd ./packages/use-floating &&  pnpm publish",
     "preview": "vite preview --port 5050",
@@ -17,6 +18,7 @@
     "@floating-ui/dom": "^0.4.2",
     "@floating-ui/react-dom": "^0.6.1",
     "floating-vue": "^2.0.0-beta.12",
+    "regenerator-runtime": "^0.13.9",
     "vue": "^3.2.31",
     "vue-router": "^4.0.12"
   },
