--- a/packages/use-floating/package.json
+++ b/packages/use-floating/package.json
@@ -1,6 +1,6 @@
 {
   "name": "use-floating",
-  "version": "0.0.4",
+  "version": "0.0.6",
   "description": "using floating-ui with vue3 composition api",
   "main": "dist/use-floating.js",
   "module": "dist/use-floating.esm.js",
@@ -45,6 +45,7 @@
   "dependencies": {
     "@babel/runtime-corejs3": "^7.17.8",
     "@floating-ui/dom": "^0.4.2",
+    "babel-plugin-external-helpers": "^6.22.0",
     "core-js": "^3.21.1",
     "vue": "^3.2.31",
     "vue-demi": "^0.12.5"
@@ -63,6 +64,7 @@
     "babel-plugin-annotate-pure-calls": "^0.4.0",
     "babel-preset-vue": "^2.0.2",
     "jest": "^27.3.1",
+    "regenerator-runtime": "^0.13.9",
     "rollup": "^2.60.1",
     "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^27.0.7",
