--- a/packages/vue-demo/package.json
+++ b/packages/vue-demo/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@vitejs/plugin-vue-jsx": "^1.3.7",
-    "use-floating": "^0.0.3",
+    "regenerator-runtime": "^0.13.9",
     "vue": "^3.2.25"
   },
   "devDependencies": {
