--- a/packages/use-floating/package.json
+++ b/packages/use-floating/package.json
@@ -1,11 +1,11 @@
 {
   "name": "use-floating",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "using floating-ui with vue3 composition api",
   "main": "dist/use-floating.js",
   "module": "dist/use-floating.esm.js",
-  "unpkg": "dist/use-floating.min.js",
-  "type": "module",
+  "unpkg": "dist/use-floating.global.js",
+  "types": "index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/use-floating.esm.js",
@@ -17,8 +17,8 @@
   "sideEffects": false,
   "files": [
     "dist/",
-    "index.d.ts",
-    "src/**/*.d.ts"
+    "src/",
+    "index.d.ts"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -42,31 +42,27 @@
     "type": "git",
     "url": "https://github.com/wflixu/Today-UI"
   },
+  "peerDependencies": {
+    "vue": "^3.2.0",
+    "@floating-ui/dom": "^0.4.2"
+  },
   "dependencies": {
-    "@babel/runtime-corejs3": "^7.17.8",
     "@floating-ui/dom": "^0.4.2",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "core-js": "^3.21.1",
-    "vue": "^3.2.31",
-    "vue-demi": "^0.12.5"
+    "vue": "^3.2.31"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.8",
-    "@babel/plugin-transform-runtime": "^7.17.0",
-    "@babel/preset-env": "^7.16.4",
-    "@babel/preset-react": "^7.16.0",
-    "@babel/preset-typescript": "^7.16.0",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-node-resolve": "^13.0.6",
-    "@rollup/plugin-replace": "^3.0.0",
+    "@rollup/plugin-alias": "^3.1.4",
+    "@rollup/plugin-commonjs": "^21.0.2",
+    "@rollup/plugin-node-resolve": "^13.0.5",
+    "@rollup/plugin-replace": "^4.0.0",
     "@types/jest": "^27.0.3",
-    "babel-plugin-annotate-pure-calls": "^0.4.0",
+    "@types/node": "^17.0.23",
     "babel-preset-vue": "^2.0.2",
     "jest": "^27.3.1",
-    "regenerator-runtime": "^0.13.9",
     "rollup": "^2.60.1",
+    "rollup-plugin-analyzer": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.31.0",
     "ts-jest": "^27.0.7",
     "typescript": "^4.5.2"
   }
