--- a/packages/vue-demo/package.json
+++ b/packages/vue-demo/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@vitejs/plugin-vue-jsx": "^1.3.7",
     "regenerator-runtime": "^0.13.9",
-    "vue": "^3.2.25"
+    "today-ui": "0.0.1",
+    "vue": "^3.2.25",
+    "use-floating":"0.0.7"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.0",
