--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev:v": "pnpm dev --filter=vue-demo",
     "dev:i": "pnpm install --filter=vue-demo",
     "build": "pnpm build --filter=use-floating",
+    "buildt": "pnpm build:type --filter=use-floating",
     "publish": "pnpm build && cd ./packages/use-floating &&  pnpm publish",
     "preview": "vite preview --port 5050",
     "test:unit": "vitest --environment jsdom",
