--- a/packages/use-floating/tsconfig.json
+++ b/packages/use-floating/tsconfig.json
@@ -6,7 +6,7 @@
     "module": "esnext",
     "moduleResolution": "node",
     "strict": true,
-    "noEmit": false,
+    "noEmit": true,
     "jsx": "preserve",
     "sourceMap": true,
     "resolveJsonModule": true,
@@ -18,6 +18,8 @@
     "isolatedModules": true,
     "noUnusedLocals": true,
     "esModuleInterop": true,
+    "declaration": true,
+    "declarationMap": true,
     "lib": [
       "esnext",
       "dom"
