--- a/packages/today-ui/package.json
+++ b/packages/today-ui/package.json
@@ -1,10 +1,9 @@
 {
   "name": "today-ui",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "dropdown menu toolptip powered by vue3, floating-ui",
   "main": "dist/today-ui.js",
   "module": "dist/today-ui.esm.js",
-  "unpkg": "dist/today-ui.min.js",
   "type": "module",
   "exports": {
     ".": {
@@ -18,7 +17,7 @@
   "files": [
     "dist/",
     "index.d.ts",
-    "src/**/*.d.ts"
+    "src/**/*"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -42,7 +41,36 @@
   "author": "wflixu",
   "license": "MIT",
   "dependencies": {
-    "use-floating": "^0.0.7",
+    "use-floating": "^0.0.8",
     "vue": "^3.2.31"
+  },
+  "peerDependencies": {
+    "use-floating": "^0.0.8",
+    "vue": "^3.2.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.17.9",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-commonjs": "^21.0.2",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.0.5",
+    "@rollup/plugin-replace": "^4.0.0",
+    "@rollup/plugin-url": "^6.1.0",
+    "@vue/compiler-sfc": "^3.2.33",
+    "esbuild": "^0.14.38",
+    "less": "^4.1.2",
+    "postcss": "^8.4.12",
+    "rollup": "^2.60.1",
+    "rollup-plugin-analyzer": "^4.0.0",
+    "rollup-plugin-esbuild": "^4.9.1",
+    "rollup-plugin-ignore-import": "^1.3.2",
+    "rollup-plugin-multi-input": "^1.3.1",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-static-import": "^0.1.1",
+    "rollup-plugin-styles": "^4.0.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-vue": "^6.0.0",
+    "rollup-pluginutils": "^2.8.2",
+    "typescript": "^4.6.3"
   }
 }
