--- a/packages/vue-demo/package.json
+++ b/packages/vue-demo/package.json
@@ -11,11 +11,12 @@
     "@vitejs/plugin-vue-jsx": "^1.3.7",
     "regenerator-runtime": "^0.13.9",
     "today-ui": "0.0.1",
-    "vue": "^3.2.25",
-    "use-floating":"0.0.8"
+    "use-floating": "0.0.8",
+    "vue": "^3.2.25"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.0",
+    "less": "^4.1.2",
     "typescript": "^4.5.4",
     "vite": "^2.9.0",
     "vue-tsc": "^0.29.8"
