--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev:r": "pnpm dev --filter=react-demo",
     "dev": "pnpm -F vue-demo  dev",
     "dev:i": "pnpm install --filter=vue-demo",
-    "build": "pnpm build --filter=use-floating",
+    "build": "pnpm build --filter=today-ui",
+    "build:base": "pnpm build --filter=use-floating",
     "buildt": "pnpm build:type --filter=use-floating",
     "publish": "pnpm build && cd ./packages/use-floating &&  pnpm publish",
     "preview": "vite preview --port 5050",
