--- a/packages/vue-demo/package.json
+++ b/packages/vue-demo/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@vitejs/plugin-vue-jsx": "^1.3.7",
     "regenerator-runtime": "^0.13.9",
-    "today-ui": "0.0.1",
+    "today-ui": "workspace:0.0.3",
     "use-floating": "0.0.8",
     "vue": "^3.2.25"
   },
