--- a/packages/today-ui/package.json
+++ b/packages/today-ui/package.json
@@ -2,13 +2,13 @@
   "name": "today-ui",
   "version": "0.0.2",
   "description": "dropdown menu toolptip powered by vue3, floating-ui",
-  "main": "dist/today-ui.js",
-  "module": "dist/today-ui.esm.js",
-  "type": "module",
+  "main": "lib/index-lib.js",
+  "module": "es/index.js",
+  "typings": "es/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/today-ui.esm.js",
-      "require": "./dist/today-ui.cjs"
+      "import": "./es/index.js",
+      "require": "./dist/today-ui.js"
     },
     "./package.json": "./package.json",
     "./src/index.ts": "./src/index.ts"
@@ -17,11 +17,22 @@
   "files": [
     "dist/",
     "index.d.ts",
-    "src/**/*"
+    "src/**/*",
+    "es/",
+    "lib/",
+    "dist/",
+    "LICENSE",
+    "README.md",
+    "CHANGELOG.md"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "NODE_ENV=build rollup -c"
+    "build": "cross-env NODE_ENV=production rollup -c ./rollup.config.js",
+    "build:type": "tsc --emitDeclarationOnly -d --outDir es/  && tsc --emitDeclarationOnly -d --outDir lib/",
+    "build:tsc": "pnpm run build:tsc-es && pnpm run build:tsc-esm && pnpm run build:tsc-lib",
+    "build:tsc-es": "tsc --emitDeclarationOnly -d --outDir es/",
+    "build:tsc-esm": "tsc --emitDeclarationOnly -d --outDir esm/",
+    "build:tsc-lib": " tsc --emitDeclarationOnly -d --outDir lib/"
   },
   "keywords": [
     "floating-ui",
@@ -41,24 +52,31 @@
   "author": "wflixu",
   "license": "MIT",
   "dependencies": {
-    "use-floating": "^0.0.8",
-    "vue": "^3.2.31"
+    "use-floating": "^0.0.8"
   },
   "peerDependencies": {
-    "use-floating": "^0.0.8",
     "vue": "^3.2.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.5.5",
     "@babel/core": "^7.17.9",
+    "@babel/plugin-transform-modules-commonjs": "^7.9.6",
+    "@babel/plugin-transform-object-assign": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/types": "^7.17.10",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^21.0.2",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.5",
     "@rollup/plugin-replace": "^4.0.0",
     "@rollup/plugin-url": "^6.1.0",
+    "@vue/babel-plugin-jsx": "^1.1.1",
     "@vue/compiler-sfc": "^3.2.33",
+    "cross-env": "^7.0.3",
     "esbuild": "^0.14.38",
     "less": "^4.1.2",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.12",
     "rollup": "^2.60.1",
     "rollup-plugin-analyzer": "^4.0.0",
