--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -13,10 +13,12 @@ jobs:
   publish-npm:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+        with:
+          ref: release
       - uses: pnpm/action-setup@v2.0.1
-         with:
-           version: 6.20.3
+        with:
+          version: 6.20.3
       - uses: actions/setup-node@v2
         with:
           node-version: 16
