--- a/packages/today-ui/package.json
+++ b/packages/today-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "today-ui",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "dropdown menu toolptip powered by vue3, floating-ui",
   "main": "lib/index-lib.js",
   "module": "es/index.js",
@@ -52,6 +52,7 @@
   "author": "wflixu",
   "license": "MIT",
   "dependencies": {
+    "lodash": "^4.17.21",
     "use-floating": "^0.0.8"
   },
   "peerDependencies": {
@@ -71,6 +72,7 @@
     "@rollup/plugin-node-resolve": "^13.0.5",
     "@rollup/plugin-replace": "^4.0.0",
     "@rollup/plugin-url": "^6.1.0",
+    "@types/lodash": "^4.14.182",
     "@vue/babel-plugin-jsx": "^1.1.1",
     "@vue/compiler-sfc": "^3.2.33",
     "cross-env": "^7.0.3",
