--- a/packages/today-ui/package.json
+++ b/packages/today-ui/package.json
@@ -26,7 +26,7 @@
     "CHANGELOG.md"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vite build",
     "build": "cross-env NODE_ENV=production rollup -c ./rollup.config.js && pnpm build:type",
     "build:type": "tsc --emitDeclarationOnly -d --outDir es/  && tsc --emitDeclarationOnly -d --outDir lib/",
     "build:tsc": "pnpm run build:tsc-es && pnpm run build:tsc-esm && pnpm run build:tsc-lib",
@@ -91,6 +91,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^6.0.0",
     "rollup-pluginutils": "^2.8.2",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "vite": "^2.9.12"
   }
 }
