--- a/packages/use-floating/tsconfig.type.json
+++ b/packages/use-floating/tsconfig.type.json
@@ -33,6 +33,8 @@
     "./index.d.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "./src/main.ts",
+    "./src/App.vue"
   ]
 }
