--- a/packages/vue-demo/package.json
+++ b/packages/vue-demo/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --force",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview"
   },
@@ -11,7 +11,7 @@
     "@vitejs/plugin-vue-jsx": "^1.3.7",
     "regenerator-runtime": "^0.13.9",
     "today-ui": "workspace:0.0.3",
-    "use-floating": "0.0.9",
+    "use-floating": "0.0.10",
     "vue": "^3.2.25",
     "vue-router": "^4.0.15"
   },
