--- a/packages/vue-demo/package.json
+++ b/packages/vue-demo/package.json
@@ -5,13 +5,13 @@
   "scripts": {
     "dev": "vite --force",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "serve": "vite preview"
   },
   "dependencies": {
     "@vitejs/plugin-vue-jsx": "^1.3.7",
     "regenerator-runtime": "^0.13.9",
     "today-ui": "workspace:0.0.3",
-    "use-floating": "0.0.11",
+    "use-floating": "0.0.12",
     "vue": "^3.2.25",
     "vue-router": "^4.0.15"
   },
