--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ node_modules
 /.pnp
 .pnp.js
 /packages/**/dist/
+/.pnpm-store
 # testing
 /coverage
 
@@ -19,6 +20,7 @@ node_modules
 
 # npm
 package-lock.json
+
 # misc
 .DS_Store
 .env.local
