--- a/packages/react-demo/package.json
+++ b/packages/react-demo/package.json
@@ -11,7 +11,8 @@
     "@floating-ui/react-dom-interactions": "^0.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-merge-refs": "^1.1.0"
+    "react-merge-refs": "^1.1.0",
+    "react-router-dom": "6"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
