--- a/packages/today-ui/package.json
+++ b/packages/today-ui/package.json
@@ -59,39 +59,11 @@
     "vue": "^3.2.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.17.9",
-    "@babel/plugin-transform-modules-commonjs": "^7.9.6",
-    "@babel/plugin-transform-object-assign": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.15.0",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/types": "^7.17.10",
-    "@rollup/plugin-babel": "^5.3.1",
-    "@rollup/plugin-commonjs": "^21.0.2",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.0.5",
-    "@rollup/plugin-replace": "^4.0.0",
-    "@rollup/plugin-url": "^6.1.0",
     "@types/lodash": "^4.14.182",
     "@vitejs/plugin-vue": "^2.3.3",
-    "@vue/babel-plugin-jsx": "^1.1.1",
+    "@vitejs/plugin-vue-jsx": "^1.3.7",
     "@vue/compiler-sfc": "^3.2.33",
-    "cross-env": "^7.0.3",
-    "esbuild": "^0.14.38",
-    "less": "^4.1.2",
-    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.12",
-    "rollup": "^2.60.1",
-    "rollup-plugin-analyzer": "^4.0.0",
-    "rollup-plugin-esbuild": "^4.9.1",
-    "rollup-plugin-ignore-import": "^1.3.2",
-    "rollup-plugin-multi-input": "^1.3.1",
-    "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-static-import": "^0.1.1",
-    "rollup-plugin-styles": "^4.0.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-vue": "^6.0.0",
-    "rollup-pluginutils": "^2.8.2",
     "typescript": "^4.6.3",
     "vite": "^2.9.12"
   }
