--- a/packages/today-ui/package.json
+++ b/packages/today-ui/package.json
@@ -1,14 +1,14 @@
 {
   "name": "today-ui",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "dropdown menu toolptip powered by vue3, floating-ui",
-  "main": "lib/index-lib.js",
-  "module": "es/index.js",
-  "typings": "es/index.d.ts",
+  "main": "dist/today-ui.umd.js",
+  "module": "dist/today-ui.es.js",
+  "types": "dist/src/index.d.ts",
   "exports": {
     ".": {
-      "import": "./es/index.js",
-      "require": "./dist/today-ui.js"
+      "import": "./dist/today-ui.es.js",
+      "require": "./dist/today-ui.umd.js"
     },
     "./package.json": "./package.json",
     "./src/index.ts": "./src/index.ts"
@@ -16,21 +16,15 @@
   "sideEffects": false,
   "files": [
     "dist/",
-    "index.d.ts",
-    "components/**/*",
+    "src/",
     "LICENSE",
     "README.md",
     "CHANGELOG.md"
   ],
   "scripts": {
     "dev": "vite",
-    "test": "vite build",
-    "build": "cross-env NODE_ENV=production rollup -c ./rollup.config.js && pnpm build:type",
-    "build:type": "tsc --emitDeclarationOnly -d --outDir es/  && tsc --emitDeclarationOnly -d --outDir lib/",
-    "build:tsc": "pnpm run build:tsc-es && pnpm run build:tsc-esm && pnpm run build:tsc-lib",
-    "build:tsc-es": "tsc --emitDeclarationOnly -d --outDir es/",
-    "build:tsc-esm": "tsc --emitDeclarationOnly -d --outDir esm/",
-    "build:tsc-lib": " tsc --emitDeclarationOnly -d --outDir lib/"
+    "build": "vite build && pnpm build:type",
+    "build:type": "tsc --emitDeclarationOnly -d  -p tsconfig.type.json"
   },
   "keywords": [
     "floating-ui",
@@ -50,19 +44,25 @@
   "author": "wflixu",
   "license": "MIT",
   "dependencies": {
+    "@floating-ui/vue": "^0.2.0",
     "lodash": "^4.17.21",
-    "use-floating": "^0.0.8",
-    "vue": "^3.2.37",
-    "vue-router": "^4.0.15"
+    "vue": "^3.2.0"
   },
   "peerDependencies": {
+    "@floating-ui/vue": "^0.2.0",
+    "lodash": "^4.17.21",
     "vue": "^3.2.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
+    "@types/node": "^18.11.18",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vitejs/plugin-vue-jsx": "^1.3.7",
     "@vue/compiler-sfc": "^3.2.33",
+    "cross-env": "^7.0.3",
+    "i": "^0.3.7",
+    "less": "^4.1.3",
+    "npm": "^9.3.0",
     "postcss": "^8.4.12",
     "typescript": "^4.6.3",
     "vite": "^2.9.12"
