--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@floating-ui/vue": "^0.2.0",
     "pinia": "^2.0.21",
+    "today-ui": "workspace:^0.0.4",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
