--- a/packages/today-ui/package.json
+++ b/packages/today-ui/package.json
@@ -25,7 +25,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build && pnpm build:type",
-    "build:type": "tsc --emitDeclarationOnly   -p tsconfig.type.json"
+    "build:type": "vue-tsc --emitDeclarationOnly   -p tsconfig.type.json"
   },
   "keywords": [
     "floating-ui",
@@ -66,6 +66,7 @@
     "npm": "^9.3.0",
     "postcss": "^8.4.12",
     "typescript": "^4.6.3",
-    "vite": "^2.9.12"
+    "vite": "^2.9.12",
+    "vue-tsc": "^1.0.24"
   }
 }
