--- a/packages/today-ui/tsconfig.json
+++ b/packages/today-ui/tsconfig.json
@@ -1,43 +1,37 @@
 {
   "compilerOptions": {
+    "composite": true,
+    "target": "esnext",
+    "useDefineForClassFields": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "strict": true,
+    "jsx": "preserve",
+    "sourceMap": true,
+    "resolveJsonModule": true,
+    
+    "isolatedModules": true,
+    "esModuleInterop": true,
     "lib": [
       "esnext",
       "dom"
     ],
-    "target": "esnext",
     "declaration": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "isolatedModules": false,
     "experimentalDecorators": true,
-    "esModuleInterop": true,
     "noImplicitAny": true,
     "noImplicitThis": true,
     "strictNullChecks": false,
     "removeComments": true,
     "suppressImplicitAnyIndexErrors": true,
     "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true,
     "allowJs": true,
     "skipLibCheck": true,
     "incremental": false,
-    "jsx": "preserve",
     "baseUrl": "./"
   },
+  "include": ["src/**/*.ts",  "src/**/*.tsx", "src/**/*.vue", "src/*.ts", "package.json"],
   "exclude": [
     "node_modules",
     "dist"
   ],
-  "compileOnSave": false,
-  "references": [
-    {
-      "path": "./tsconfig.vite.json"
-    },
-    {
-      "path": "./tsconfig.app.json"
-    },
-    {
-      "path": "./tsconfig.type.json"
-    }
-  ]
 }
