--- a/.github/workflows/today-ui.yml
+++ b/.github/workflows/today-ui.yml
@@ -1,15 +1,14 @@
 # This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
 # For more information see: https://help.github.com/actions/language-and-framework-guides/publishing-nodejs-packages
 
-name: today-ui npm publish 
+name: today-ui npm publish
 
 on:
   push:
-    branches: 
+    branches:
       - release
 
 jobs:
-  
   publish-npm:
     runs-on: ubuntu-latest
     steps:
@@ -18,18 +17,18 @@ jobs:
           ref: release
       - uses: pnpm/action-setup@v2.0.1
         with:
-          version: 7.3.0
+          version: 7.27.1
       - uses: actions/setup-node@v2
         with:
-          node-version: 16
+          node-version: 18
           registry-url: https://registry.npmjs.org/
-          cache: 'pnpm'
+          cache: "pnpm"
       - name: Install dependencies
-        run: pnpm -F=today-ui  install
+        run: pnpm   install
       - name: build
-        run: pnpm -F=today-ui build
+        run: pnpm  build
       - name: publish
-        run: cd ./packages/today-ui/ &&  npm publish
+        run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
