--- a/package.json
+++ b/package.json
@@ -1,21 +1,89 @@
 {
-  "name": "today",
-  "version": "0.0.0",
-  "private": true,
+  "name": "today-ui",
+  "version": "0.0.5",
+  "description": "dropdown menu toolptip powered by vue3, floating-ui",
+  "main": "dist/today-ui.umd.js",
+  "module": "dist/today-ui.es.js",
+  "types": "dist/src/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/today-ui.es.js",
+      "require": "./dist/today-ui.umd.js"
+    },
+    "./package.json": "./package.json",
+    "./src/index.ts": "./src/index.ts",
+    "./dist/style.css": "./dist/style.css"
+  },
+  "sideEffects": false,
+  "files": [
+    "dist/",
+    "src/",
+    "LICENSE",
+    "README.md",
+    "CHANGELOG.md"
+  ],
   "scripts": {
-    "dev": "pnpm -F=demo  dev",
-    "dev:i": "pnpm install --filter=vue-demo",
-    "build": "pnpm build --filter=today-ui",
+    "dev": "vite",
+    "build": "vite build && pnpm build:type",
+    "build:type": "vue-tsc --emitDeclarationOnly   -p tsconfig.type.json",
     "build:base": "pnpm build --filter=use-floating",
     "buildt": "pnpm build:type --filter=use-floating",
     "publish": "pnpm build && cd ./packages/use-floating &&  pnpm publish",
     "preview": "vite preview --port 5050",
     "test:unit": "vitest --environment jsdom",
     "typecheck": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "devDependencies": {
-    "pnpm": "^7.9.0"
+    "@storybook/addon-essentials": "^7.0.0-beta.54",
+    "@storybook/addon-interactions": "^7.0.0-beta.54",
+    "@storybook/addon-links": "^7.0.0-beta.54",
+    "@storybook/blocks": "^7.0.0-alpha.8",
+    "@storybook/testing-library": "^0.0.14-next.1",
+    "@storybook/vue3": "^7.0.0-beta.54",
+    "@storybook/vue3-vite": "^7.0.0-beta.54",
+    "@types/lodash": "^4.14.182",
+    "@types/node": "^18.11.18",
+    "@vitejs/plugin-vue": "4.0.0",
+    "@vitejs/plugin-vue-jsx": "3.0.0",
+    "@vue/compiler-sfc": "^3.2.33",
+    "cross-env": "^7.0.3",
+    "less": "^4.1.3",
+    "postcss": "^8.4.12",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "storybook": "^7.0.0-beta.54",
+    "typescript": "^4.8.3",
+    "vite": "^4.1.4",
+    "vue-tsc": "^1.2.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@floating-ui/vue": "^0.2.0",
+    "lodash": "^4.17.21",
+    "vue": "^3.2.0"
+  },
+  "peerDependencies": {
+    "@floating-ui/vue": "^0.2.0",
+    "lodash": "^4.17.21",
+    "vue": "^3.2.0"
+  },
+  "keywords": [
+    "floating-ui",
+    "@floating-ui/dom",
+    "vue3",
+    "composition api",
+    "tooltip",
+    "menu",
+    "dropdown",
+    "contextmenu",
+    "modal"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wflixu/Today-UI"
+  },
+  "author": "wflixu",
+  "license": "MIT"
 }
