--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "test:unit": "vitest --environment jsdom",
     "typecheck": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "sb:dev": "storybook dev -p 6006",
+    "sb:build": "storybook build"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.0.0-beta.54",
