--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "CHANGELOG.md"
   ],
   "scripts": {
-    "dev": "vite",
+    "dev": "storybook dev -p 6006",
     "build": "vite build && pnpm build:type",
     "build:type": "vue-tsc --emitDeclarationOnly   -p tsconfig.type.json",
     "build:base": "pnpm build --filter=use-floating",
@@ -37,24 +37,27 @@
     "sb:build": "storybook build"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.0.0-beta.54",
-    "@storybook/addon-interactions": "^7.0.0-beta.54",
-    "@storybook/addon-links": "^7.0.0-beta.54",
-    "@storybook/blocks": "^7.0.0-alpha.8",
-    "@storybook/testing-library": "^0.0.14-next.1",
-    "@storybook/vue3": "^7.0.0-beta.54",
-    "@storybook/vue3-vite": "^7.0.0-beta.54",
+    "@storybook/addon-essentials": "^7.2.2",
+    "@storybook/addon-interactions": "^7.2.2",
+    "@storybook/addon-links": "^7.2.2",
+    "@storybook/addon-mdx-gfm": "^7.2.2",
+    "@storybook/blocks": "^7.2.2",
+    "@storybook/testing-library": "^0.2.0",
+    "@storybook/vue3": "^7.2.2",
+    "@storybook/vue3-vite": "^7.2.2",
     "@types/lodash": "^4.14.182",
     "@types/node": "^18.11.18",
     "@vitejs/plugin-vue": "4.0.0",
     "@vitejs/plugin-vue-jsx": "3.0.0",
+    "@vue/compiler-core": "^3.3.4",
     "@vue/compiler-sfc": "^3.2.33",
     "cross-env": "^7.0.3",
     "less": "^4.1.3",
     "postcss": "^8.4.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook": "^7.0.0-beta.54",
+    "remark-gfm": "^3.0.1",
+    "storybook": "^7.2.2",
     "typescript": "^4.8.3",
     "vite": "^4.1.4",
     "vue-tsc": "^1.2.0"
