--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "typecheck": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "sb:dev": "storybook dev -p 6006",
-    "sb:build": "storybook build"
+    "sb:build": "storybook build",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.2.2",
@@ -47,10 +49,13 @@
     "@storybook/vue3-vite": "^7.2.2",
     "@types/lodash": "^4.14.182",
     "@types/node": "^18.11.18",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-vue": "4.0.0",
     "@vitejs/plugin-vue-jsx": "3.0.0",
     "@vue/compiler-core": "^3.3.4",
     "@vue/compiler-sfc": "^3.2.33",
+    "@vuedx/typescript-plugin-vue": "^0.7.6",
     "cross-env": "^7.0.3",
     "less": "^4.1.3",
     "postcss": "^8.4.12",
@@ -63,12 +68,13 @@
     "vue-tsc": "^1.2.0"
   },
   "dependencies": {
-    "@floating-ui/vue": "^0.2.0",
+    "@floating-ui/vue": "^1.0.2",
+    "@vue/shared": "^3.3.4",
     "lodash": "^4.17.21",
     "vue": "^3.2.0"
   },
   "peerDependencies": {
-    "@floating-ui/vue": "^0.2.0",
+    "@floating-ui/vue": "^1.0.2",
     "lodash": "^4.17.21",
     "vue": "^3.2.0"
   },
