--- a/package.json
+++ b/package.json
@@ -39,20 +39,18 @@
     "build-storybook": "storybook build"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.2.3",
-    "@storybook/addon-interactions": "^7.2.3",
-    "@storybook/addon-links": "^7.2.3",
+    "@storybook/addon-essentials": "^7.3.0",
+    "@storybook/addon-interactions": "^7.3.0",
+    "@storybook/addon-links": "^7.3.0",
+    "@storybook/blocks": "^7.3.0",
+    "@storybook/cli": "^7.3.0",
+    "@storybook/testing-library": "^0.0.14-next.2",
+    "@storybook/vue3": "^7.3.0",
+    "@storybook/vue3-vite": "^7.3.0",
     "@storybook/addon-mdx-gfm": "^7.2.2",
-    "@storybook/blocks": "^7.2.3",
-    "@storybook/testing-library": "^0.2.0",
-    "@storybook/vue3": "^7.2.3",
-    "@storybook/vue3-vite": "^7.2.3",
     "@types/lodash": "^4.14.182",
-    "@types/node": "^18.11.18",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-vue": "4.2.0",
-    "@vitejs/plugin-vue-jsx": "3.0.0",
     "@vue/compiler-core": "^3.3.4",
     "@vue/compiler-sfc": "^3.2.33",
     "@vuedx/typescript-plugin-vue": "^0.7.6",
@@ -63,20 +61,30 @@
     "react-dom": "^18.2.0",
     "remark-gfm": "^3.0.1",
     "storybook": "^7.2.3",
-    "typescript": "^5.1.3",
-    "vite": "^4.3.5",
-    "vue-tsc": "^1.6.4"
+    "@tsconfig/node18": "^18.2.0",
+    "@types/jsdom": "^21.1.1",
+    "@types/node": "^18.17.0",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "@vitejs/plugin-vue-jsx": "^3.0.1",
+    "@vue/test-utils": "^2.4.1",
+    "@vue/tsconfig": "^0.4.0",
+    "jsdom": "^22.1.0",
+    "npm-run-all": "^4.1.5",
+    "typescript": "~5.1.6",
+    "vite": "^4.4.6",
+    "vitest": "^0.33.0",
+    "vue-tsc": "^1.8.6"
   },
   "dependencies": {
     "@floating-ui/vue": "^1.0.2",
     "@vue/shared": "^3.3.4",
     "lodash": "^4.17.21",
-    "vue": "^3.2.0"
+    "vue": "^3.3.4"
   },
   "peerDependencies": {
     "@floating-ui/vue": "^1.0.2",
     "lodash": "^4.17.21",
-    "vue": "^3.3.0"
+    "vue": "^3.3.4"
   },
   "keywords": [
     "floating-ui",
