--- a/tsconfig.type.json
+++ b/tsconfig.type.json
@@ -1,22 +1,9 @@
 {
+    "extends": "./tsconfig.app.json",
     "compilerOptions": {
-      "composite": true,
-      "target": "esnext",
-      "useDefineForClassFields": true,
-      "module": "esnext",
-      "moduleResolution": "node",
       "outDir": "dist/",
-      "strict": true,
-      "jsx": "preserve",
-      "sourceMap": true,
-      "resolveJsonModule": true,
-      "isolatedModules": true,
-      "esModuleInterop": true,
       "strictNullChecks": false,
-
-      "lib": ["esnext", "dom"],
-      "types": ["vite/client","node"],
-      "skipLibCheck": true
+      "types": ["vite/client","node"]
     },
     "include": ["src/**/*.ts",  "src/**/*.tsx", "src/**/*.vue", "src/*.ts", "package.json"],
     "exclude": [
