[feat] 优化file-tree

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -15,6 +15,7 @@
   "compilerOptions": {
     "composite": true,
     "baseUrl": ".",
+    "outDir": "dist",
     "paths": {
       "@/*": [
         "./src/*"
