--- a/tsconfig.type.json
+++ b/tsconfig.type.json
@@ -2,8 +2,9 @@
     "extends": "./tsconfig.app.json",
     "compilerOptions": {
       "outDir": "dist/",
-      "strictNullChecks": false,
-      "types": ["vite/client","node"]
+      "declaration": true,
+      "emitDeclarationOnly": true,
+      "strictNullChecks": false
     },
     "include": ["src/**/*.ts",  "src/**/*.tsx", "src/**/*.vue", "src/*.ts", "package.json"],
     "exclude": [
