--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
   "name": "today-ui",
-  "version": "0.0.13",
+  "version": "0.0.14",
   "description": "dropdown menu toolptip powered by vue3, floating-ui",
   "main": "dist/today-ui.umd.js",
   "module": "dist/today-ui.es.js",
   "types": "dist/src/index.d.ts",
   "exports": {
-    ".": {
-      "import": "./dist/today-ui.es.js",
-      "require": "./dist/today-ui.umd.js"
-    },
     "./package.json": "./package.json",
     "./src/index.ts": "./src/index.ts",
     "./dist/style.css": "./dist/style.css"
@@ -25,6 +21,7 @@
   "scripts": {
     "dev": "storybook dev -p 6006",
     "build": "vite build && pnpm build:type",
+    "bd": "tsc -p tsconfig.app.json",
     "build:type": "vue-tsc  -p tsconfig.type.json",
     "preview": "vite preview --port 5050",
     "test:unit": "vitest --environment jsdom",
