--- a/tsconfig.type.json
+++ b/tsconfig.type.json
@@ -1,9 +1,10 @@
 {
     "extends": "./tsconfig.app.json",
     "compilerOptions": {
-      "outDir": "dist/",
+      "outFile": "dist/today-ui.d.ts",
       "declaration": true,
       "emitDeclarationOnly": true,
+      "verbatimModuleSyntax": false,
       "strictNullChecks": false
     },
     "include": ["src/**/*.ts",  "src/**/*.tsx", "src/**/*.vue", "src/*.ts", "package.json"],
