--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "today-ui",
-  "version": "0.0.15",
+  "version": "0.0.16",
   "description": "dropdown menu toolptip powered by vue3, floating-ui",
   "main": "dist/today-ui.umd.js",
   "module": "dist/today-ui.es.js",
-  "types": "dist/today-ui.d.ts",
+  "types": "dist/src/index.d.ts",
   "exports": {
     ".": {
-      "types": "./dist/today-ui.d.ts",
+      "types": "./dist/src/index.d.ts",
       "import": "./dist/today-ui.es.js",
       "require": "./dist/today-ui.umd.js"
     },
