--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -14,9 +14,9 @@
     "src/**/*stories.ts"
   ],
   "compilerOptions": {
-    "composite": true,
     "baseUrl": ".",
     "outDir": "dist",
+    "moduleResolution": "Node",
     "paths": {
       "@/*": [
         "./src/*"
