--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -16,6 +16,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "outDir": "dist",
+    "jsx": "preserve",
+    "jsxImportSource": "vue",
     "moduleResolution": "Node",
     "paths": {
       "@/*": [
