[build] update dependences

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,8 @@
 {
     "editor.formatOnSave": true,
     "editor.codeActionsOnSave": {
-      // For ESLint
-      "source.fixAll.eslint": true,
-      // For Stylelint
-      "source.fixAll.stylelint": true
+      "source.fixAll.eslint": "explicit",
+      "source.fixAll.stylelint": "explicit"
     },
     "stylelint.validate": ["css", "less", "postcss", "scss", "vue", "sass", "html"],
     "[markdown]": {
