--- a/package.json
+++ b/package.json
@@ -41,50 +41,50 @@
     "build-storybook": "storybook build"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.3.0",
-    "@storybook/addon-interactions": "^7.3.0",
-    "@storybook/addon-links": "^7.3.0",
-    "@storybook/addon-mdx-gfm": "^7.2.2",
-    "@storybook/blocks": "^7.3.0",
-    "@storybook/cli": "^7.3.0",
-    "@storybook/testing-library": "^0.0.14-next.2",
-    "@storybook/vue3": "^7.3.0",
-    "@storybook/vue3-vite": "^7.3.0",
-    "@tsconfig/node18": "^18.2.0",
-    "@types/jsdom": "^21.1.1",
-    "@types/lodash": "^4.14.182",
-    "@types/node": "^18.17.0",
-    "@types/postcss-import": "^14.0.0",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "@vitejs/plugin-vue-jsx": "^3.0.1",
-    "@vue/compiler-core": "^3.3.4",
-    "@vue/compiler-sfc": "^3.2.33",
-    "@vue/test-utils": "^2.4.1",
+    "@storybook/addon-essentials": "^7.6.17",
+    "@storybook/addon-interactions": "^7.6.17",
+    "@storybook/addon-links": "^7.6.17",
+    "@storybook/addon-mdx-gfm": "^7.6.17",
+    "@storybook/blocks": "^7.6.17",
+    "@storybook/cli": "^7.6.17",
+    "@storybook/testing-library": "0.0.14-next.2",
+    "@storybook/vue3": "^7.6.17",
+    "@storybook/vue3-vite": "^7.6.17",
+    "@tsconfig/node18": "^18.2.2",
+    "@types/jsdom": "^21.1.6",
+    "@types/lodash": "^4.14.202",
+    "@types/node": "^20.11.25",
+    "@types/postcss-import": "^14.0.3",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "@vue/compiler-core": "^3.4.21",
+    "@vue/compiler-sfc": "^3.4.21",
+    "@vue/test-utils": "^2.4.4",
     "@vue/tsconfig": "^0.4.0",
     "@vuedx/typescript-plugin-vue": "^0.7.6",
     "cross-env": "^7.0.3",
     "jsdom": "^22.1.0",
-    "less": "^4.1.3",
+    "less": "^4.2.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.12",
+    "postcss": "^8.4.35",
     "postcss-import": "^15.1.0",
     "postcss-nested": "^6.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remark-gfm": "^3.0.1",
-    "storybook": "^7.2.3",
+    "storybook": "^7.6.17",
     "typescript": "~5.1.6",
-    "vite": "^4.4.6",
+    "vite": "^5.1.5",
     "vitest": "^0.33.0",
-    "vue-tsc": "^1.8.6"
+    "vue-tsc": "^2.0.5"
   },
   "dependencies": {
-    "@floating-ui/vue": "^1.0.2",
-    "@vue/shared": "^3.3.4",
+    "@floating-ui/vue": "^1.0.6",
+    "@vue/shared": "^3.4.21",
     "lodash": "^4.17.21",
-    "vue": "^3.3.4"
+    "vue": "^3.4.21"
   },
   "peerDependencies": {
     "vue": "^3.3.4"
