--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "today-ui",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "dropdown menu toolptip powered by vue3, floating-ui",
   "main": "dist/today-ui.umd.js",
   "module": "dist/today-ui.es.js",
-  "types": "dist/src/index.d.ts",
+  "types": "dist/today-ui.d.ts",
   "exports": {
     ".": {
-      "types": "./dist/src/index.d.ts",
+      "types": "./dist/today-ui.d.ts",
       "import": "./dist/today-ui.es.js",
       "require": "./dist/today-ui.umd.js"
     },
@@ -29,7 +29,8 @@
   "scripts": {
     "dev": "storybook dev -p 6006",
     "tsup": "tsup ./src/index.ts --experimental-dts",
-    "build": "vite build && pnpm build:type",
+    "dts": "api-extractor run --local",
+    "build": "vite build && pnpm build:type && pnpm dts && rm -rf dist/src",
     "bd": "tsc -p tsconfig.app.json",
     "build:type": "vue-tsc  -p tsconfig.type.json",
     "preview": "vite preview --port 5050",
@@ -65,7 +66,7 @@
     "@vue/compiler-core": "^3.4.21",
     "@vue/compiler-sfc": "^3.4.21",
     "@vue/test-utils": "^2.4.5",
-    "@vue/tsconfig": "^0.4.0",
+    "@vue/tsconfig": "^0.5.1",
     "@vuedx/typescript-plugin-vue": "^0.7.6",
     "cross-env": "^7.0.3",
     "jsdom": "^22.1.0",
