--- a/package.json
+++ b/package.json
@@ -35,9 +35,20 @@
     "preview": "vite preview --port 5050",
     "test:unit": "vitest --environment jsdom",
     "typecheck": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "storybook": "storybook dev -p 6006",
+    "sb:build": "storybook build"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^1.3.5",
+    "@microsoft/api-extractor": "^7.43.4",
+    "@storybook/addon-essentials": "^8.0.10",
+    "@storybook/addon-interactions": "^8.0.10",
+    "@storybook/addon-links": "^8.0.10",
+    "@storybook/blocks": "^8.0.10",
+    "@storybook/test": "^8.0.10",
+    "@storybook/vue3": "^8.0.10",
+    "@storybook/vue3-vite": "^8.0.10",
     "@tsconfig/node20": "~20.1.4",
     "@types/jsdom": "^21.1.6",
     "@types/lodash": "^4.17.1",
@@ -58,15 +69,14 @@
     "postcss": "^8.4.38",
     "postcss-import": "^15.1.0",
     "postcss-nested": "^6.0.1",
+    "storybook": "^8.0.10",
     "typescript": "~5.1.6",
-    "@microsoft/api-extractor": "^7.43.4",
     "vite": "^5.2.11",
     "vitest": "^0.33.0",
     "vue-tsc": "^2.0.17"
   },
   "dependencies": {
     "@floating-ui/vue": "^1.0.6",
-   
     "lodash": "^4.17.21",
     "vue": "^3.4.27"
   },
