chore: changt all type export

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -16,6 +16,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "outDir": "dist",
+    "verbatimModuleSyntax": false,
+    "strictNullChecks": false,
     "paths": {
       "@/*": [
         "./src/*"
