--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
   "scripts": {
     "dev": "storybook dev -p 6006",
     "dts": "api-extractor run --local",
-    "build": "vite build && pnpm build:type && pnpm dts && rm -rf dist/src",
-    "bd": "tsc -p tsconfig.app.json",
+    "build": "vite build && vue-tsc -p tsconfig.type.json  && pnpm dts && rm -rf dist/src",
+    "bd": " vue-tsc -p tsconfig.type.json",
+    "b": " vite build",
     "build:type": "vue-tsc  -p tsconfig.type.json",
+    "bt": "tsc  -p tsconfig.type.json",
     "preview": "vite preview --port 5050",
     "test:unit": "vitest --environment jsdom",
     "typecheck": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
@@ -40,10 +42,8 @@
     "sb:build": "storybook build"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^1.3.5",
     "@microsoft/api-extractor": "^7.43.4",
     "@storybook/addon-essentials": "^8.1.1",
-    "@storybook/addon-interactions": "^8.1.1",
     "@storybook/addon-links": "^8.1.1",
     "@storybook/blocks": "^8.1.1",
     "@storybook/test": "^8.1.1",
