--- a/.github/workflows/page-publish.yml
+++ b/.github/workflows/page-publish.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install
         run: pnpm install 
       - name: Build
-        run: pnpm run story:build
+        run: pnpm run doc
       - uses: actions/configure-pages@v2
       - uses: actions/upload-pages-artifact@v1
         with:
