--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "editor.formatOnSave": true,
+    "editor.defaultFormatter": "dprint.dprint",
     "editor.codeActionsOnSave": {
       "source.fixAll.eslint": "explicit",
       "source.fixAll.stylelint": "explicit"
@@ -29,5 +30,8 @@
       ".stylelintrc": "jsonc"
     },
     "typescript.tsdk": "node_modules/typescript/lib",
+    "[vue]": {
+      "editor.defaultFormatter": "Vue.volar"
+    },
   }
   
